--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "Resume"
-    url: /files/Resume.pdf
+    url: /cv/
 
   - title: "Portfolio"
     url: /portfolio/    
