--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
+minimal_mistakes_skin: "dirt"
+
 locale                   : "en-US"
 title                    : "Home"
 title_separator          : "-"
